syntax = "proto3";

package lightning.wire;

import "lightning/wire/types.proto";

message OpenChannel {
  uint32 type = 1 [(bits) = 16];
  string chain_hash = 2;
  string temporary_channel_id = 3;
  uint64 funding_satoshis = 4;
  uint64 push_msat = 5;
  uint64 dust_limit_satoshis = 6;
  uint64 max_htlc_value_in_flight_msat = 7;
  uint64 channel_reserve_satoshis = 8;
  uint64 htlc_minimum_msat = 9;
  uint32 feerate_per_kw = 10;
  uint32 to_self_delay = 11 [(bits) = 16];
  uint32 max_accepted_htlcs = 12 [(bits) = 16];
  string funding_pubkey = 13 [(length) = 33, (hex) = true];
  string revocation_basepoint = 14 [(length) = 33, (hex) = true];;
  string payment_basepoint = 15 [(length) = 33, (hex) = true];;
  string delayed_payment_basepoint = 16 [(length) = 33, (hex) = true];;
  string htlc_basepoint = 17 [(length) = 33, (hex) = true];;
  string first_per_commitment_point = 18 [(length) = 33, (hex) = true];;
  bytes channel_flags = 19;
}
